tests/ast_interpreter/err_string_comparison_mixed.expected
<string>:2:17: error: operator < cannot be applied to String and Int
    print("abc" < 123);
                ^
