tests/ast_interpreter/err_string_comparison_mixed.nx
fun main() {
    print("abc" < 123);
    return 0;
}